tests/expectations/compiler/structs/member_variable_fail.out
DCE_ENABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:9:17
     |
   9 |         let err = a.y;
     |                 ^
DCE_DISABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:9:17
     |
   9 |         let err = a.y;
     |                 ^